crates/compiler/parser/tests/snapshots/constant_folding::test_unary_negation_non_zero.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---

        fn main() -> felt {
            let x = -5;
            return x;
        }
        
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "main",
                    12..16,
                ),
                params: [],
                return_type: Spanned(
                    Named(
                        Spanned(
                            Felt,
                            22..26,
                        ),
                    ),
                    22..26,
                ),
                body: [
                    Spanned(
                        Let {
                            pattern: Identifier(
                                Spanned(
                                    "x",
                                    45..46,
                                ),
                            ),
                            statement_type: None,
                            value: Spanned(
                                UnaryOp {
                                    op: Neg,
                                    expr: Spanned(
                                        Literal(
                                            5,
                                            None,
                                        ),
                                        50..51,
                                    ),
                                },
                                49..51,
                            ),
                        },
                        41..52,
                    ),
                    Spanned(
                        Return {
                            value: Some(
                                Spanned(
                                    Identifier(
                                        Spanned(
                                            "x",
                                            72..73,
                                        ),
                                    ),
                                    72..73,
                                ),
                            ),
                        },
                        65..74,
                    ),
                ],
            },
            9..84,
        ),
    ),
]
