crates/compiler/parser/tests/snapshots/expressions::bitwise_precedence.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test() { let z = a & b ^ c | d; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Let {
                            pattern: Identifier(
                                Spanned(
                                    "z",
                                    16..17,
                                ),
                            ),
                            statement_type: None,
                            value: Spanned(
                                BinaryOp {
                                    op: BitwiseOr,
                                    left: Spanned(
                                        BinaryOp {
                                            op: BitwiseXor,
                                            left: Spanned(
                                                BinaryOp {
                                                    op: BitwiseAnd,
                                                    left: Spanned(
                                                        Identifier(
                                                            Spanned(
                                                                "a",
                                                                20..21,
                                                            ),
                                                        ),
                                                        20..21,
                                                    ),
                                                    right: Spanned(
                                                        Identifier(
                                                            Spanned(
                                                                "b",
                                                                24..25,
                                                            ),
                                                        ),
                                                        24..25,
                                                    ),
                                                },
                                                20..25,
                                            ),
                                            right: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "c",
                                                        28..29,
                                                    ),
                                                ),
                                                28..29,
                                            ),
                                        },
                                        20..29,
                                    ),
                                    right: Spanned(
                                        Identifier(
                                            Spanned(
                                                "d",
                                                32..33,
                                            ),
                                        ),
                                        32..33,
                                    ),
                                },
                                20..33,
                            ),
                        },
                        12..34,
                    ),
                ],
            },
            0..36,
        ),
    ),
]
