crates/compiler/parser/tests/snapshots/paren_debug::paren_simple_add.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test() { (a + b); }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                BinaryOp {
                                    op: Add,
                                    left: Spanned(
                                        Identifier(
                                            Spanned(
                                                "a",
                                                13..14,
                                            ),
                                        ),
                                        13..14,
                                    ),
                                    right: Spanned(
                                        Identifier(
                                            Spanned(
                                                "b",
                                                17..18,
                                            ),
                                        ),
                                        17..18,
                                    ),
                                },
                                12..19,
                            ),
                        ),
                        12..20,
                    ),
                ],
            },
            0..22,
        ),
    ),
]
