crates/compiler/parser/tests/snapshots/toplevel::empty_program.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---

--- AST ---
[]
