crates/compiler/parser/tests/snapshots/toplevel::empty_struct.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
struct Unit { }
--- AST ---
[
    Struct(
        Spanned(
            StructDef {
                name: Spanned(
                    "Unit",
                    7..11,
                ),
                fields: [],
            },
            0..15,
        ),
    ),
]
